--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "better-scroll": "^1.15.2",
     "core-js": "^3.3.2",
     "fastclick": "^1.0.6",
     "register-service-worker": "^1.6.2",
