--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.3.2",
     "fastclick": "^1.0.6",
     "register-service-worker": "^1.6.2",
+    "vconsole": "^3.3.4",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.1.3",
