--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "better-scroll": "^1.15.2",
     "core-js": "^3.3.2",
     "fastclick": "^1.0.6",
+    "is-webview": "^1.0.1",
     "register-service-worker": "^1.6.2",
     "vconsole": "^3.3.4",
     "vue": "^2.6.10",
